2009-04-01  Bastien Nocera  <hadess@hadess.net>

	* lib/totem_internal.h: And delete totem_internal.h too,
	thanks Christian

2009-04-01  Bastien Nocera  <hadess@hadess.net>

	* lib/asprintf.c: Remove unused file (Closes: #577538)

2009-03-31  Bastien Nocera  <hadess@hadess.net>

	* src/plugins/thumbnail/totem-thumbnail.c (set_icon_to_default):
	Patch from Philip Withnall <philip@tecnocode.co.uk> to reset the
	icon properly, see bug #573973

2009-03-31  Bastien Nocera  <hadess@hadess.net>

	* src/totem-object.c (totem_action_set_mrl_with_warning),
	(video_widget_create): Set the default drag action to be copy,
	and only make the video widget a drag source when there's a video
	loaded (Closes: #574565)

2009-03-31  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-gst-0.10.c
	(bacon_video_widget_close): Reset the seekbar to 0 when a file
	is closed (Closes: #577255)

2009-03-31  Bastien Nocera  <hadess@hadess.net>

	* data/playlist.ui: Patch from Bruce Cowan
	<bugs@bcowan.fastmail.co.uk> to remove the relief on the
	playlist buttons (Closes: #568127)

2009-03-31  Bastien Nocera  <hadess@hadess.net>

	* src/plugins/opensubtitles/opensubtitles.py: Sort the languages
	in the combo box (Closes: #577366)

2009-03-24  Christian Persch  <chpe@gnome.org>

	* src/totem-session.c: (totem_session_restore):
	* src/totem-session.h:
	* src/totem.c: (main): Add smclient options when parsing totem's
	command line. Bug #576620.

2009-03-24  Christian Persch  <chpe@gnome.org>

	* src/eggdesktopfile.c: (egg_set_desktop_file):
	* src/eggsmclient-1.patch:
	* src/eggsmclient.c: (egg_sm_client_get_option_group): Update smclient
	to latest libegg copy. Bug #560328 continued.

2009-03-24  Bastien Nocera  <hadess@hadess.net>

	* src/plugins/screenshot/totem-screenshot-plugin.c (impl_activate):
	Use Ctrl+S not Shift+S to capture a screenshot (Closes: #576610)

2009-03-23  Sebastian Dröge  <sebastian.droege@collabora.co.uk>
