@@ -1,5 +1,12 @@
 2009-04-01  Bastien Nocera  <hadess@hadess.net>
 
+	* src/totem-playlist.c (ensure_shuffled): Patch from
+	Pascal Sachs <psachs@student.ethz.ch> to make sure all the items
+	are played when a playlist is shuffled but not in repeat mode
+	(Closes: #561949)
+
+2009-04-01  Bastien Nocera  <hadess@hadess.net>
+
 	* lib/totem_internal.h: And delete totem_internal.h too,
 	thanks Christian
 
